--- a/kubernetes/apps/databases/cloudnative-pg/cluster/barmancloud-backup.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/barmancloud-backup.yaml
@@ -2,7 +2,7 @@
 apiVersion: barmancloud.cnpg.io/v1
 kind: ObjectStore
 metadata:
-  name: postgis-v1
+  name: postgis
 spec:
   retentionPolicy: 30d
   configuration:
