--- a/kubernetes/apps/default/immich/app/pvc.yaml
+++ b/kubernetes/apps/default/immich/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: machine-learning-cache
+  name: immich-machine-learning-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
