--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
           reloader.stakater.com/auto: "true"
         initContainers:
           01-init-db:
-            envFrom:
+            envFrom: &envFrom
               - secretRef:
                   name: immich-secret
             image:
@@ -49,9 +49,7 @@ spec:
               REDIS_DBINDEX: "1"
               DB_VECTOR_EXTENSION: pgvector
               IMMICH_MEDIA_LOCATION: /usr/src/app/upload
-            envFrom: &envFrom
-              - secretRef:
-                  name: immich-secret
+            envFrom: *envFrom
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
