--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -71,7 +71,8 @@ spec:
             image:
               repository: ghcr.io/immich-app/immich-machine-learning
               tag: v1.133.1@sha256:c1e9b4997deaefac6c2e30208410b882390a36c72b897749974594f6a9450bdb
-            env: *env-common
+            env:
+              MPLCONFIGDIR: "/cache/matplotlib"
             envFrom: *envFrom
             resources:
               requests:
