try to add .cache and .config for ml

--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -133,3 +133,15 @@ spec:
           machine-learning:
             app:
               - path: /cache
+      cache:
+        type: emptyDir
+        advancedMounts:
+          machine-learning:
+            app:
+              - path: /.cache
+      config:
+        type: emptyDir
+        advancedMounts:
+          machine-learning:
+            app:
+              - path: /.config
