--- a/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
@@ -9,7 +9,10 @@ spec:
   immediate: true
   backupOwnerReference: self
   cluster:
-    name: postgres16
+    name: postgres
+  method: plugin
+  pluginConfiguration:
+    name: barman-cloud.cloudnative-pg.io
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
