prepare nex revovery

--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-postgis.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-postgis.yaml
@@ -52,5 +52,5 @@ spec:
   #   plugin:
   #     name: barman-cloud.cloudnative-pg.io
   #     parameters:
-  #       barmanObjectName: minio-eu
+  #       barmanObjectName: postgis
   #       serverName: *previousCluster
