--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster16.yaml
@@ -47,5 +47,5 @@ spec:
   #   plugin:
   #     name: barman-cloud.cloudnative-pg.io
   #     parameters:
-  #       barmanObjectName: minio-eu
+  #       barmanObjectName: postgres
   #       serverName: *previousCluster
