Migrate to bjw-s-labs

--- a/kubernetes/apps/default/calibre-web/app/helmrelease.yaml
+++ b/kubernetes/apps/default/calibre-web/app/helmrelease.yaml
@@ -31,8 +31,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/bjw-s/calibre-web
-              tag: 0.6.24@sha256:0e53921cfcc9d6898cae4f63d6d4f8b1abebef308fe9c672bd12448bcc9c4334
+              repository: ghcr.io/bjw-s-labs/calibre-web
+              tag: 0.6.24@sha256:5cf6e9e6ceb57ebecf6863915f59cf888adbcfc139205ff2d44e15623bde130c
             env:
               CACHE_DIR: /cache
               TZ: ${TZ}
