--- a/kubernetes/apps/kube-system/fstrim/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/fstrim/app/helmrelease.yaml
@@ -26,35 +26,53 @@ spec:
     controllers:
       fstrim:
         type: cronjob
+
         cronjob:
-          schedule: 0 0 * * 0
-          parallelism: 3 # Set to total number of nodes
-          successfulJobsHistory: 1
+          schedule: "0 0 * * 0"
+          parallelism: 3 # Set this to your number of nodes
+          backoffLimit: 0
           failedJobsHistory: 1
+          successfulJobsHistory: 0
+
+        pod:
+          hostNetwork: true
+          hostPID: true
+          topologySpreadConstraints:
+            - maxSkew: 1
+              topologyKey: kubernetes.io/hostname
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchLabels:
+                  app.kubernetes.io/name: fstrim
+
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/kubanetics
-              tag: 2025.3.2@sha256:309a7587c2aa7ce6a99812a61c5024240a21b708f94802a09105c61513572164
-            env:
-              SCRIPT_NAME: fstrim.sh
+              repository: docker.io/library/alpine
+              tag: "3.21"
+            command:
+              - "/bin/sh"
+              - "-c"
+            args:
+              - |
+                nsenter --mount=/host/proc/$(pidof /usr/local/bin/kubelet)/ns/mnt --net=/host/proc/$(pidof /usr/local/bin/kubelet)/ns/net -- sh -c "cat /proc/self/mountinfo | grep -v kubelet | grep -v tmpfs | grep -v overlay > /tmp/fs.txt"
+                nsenter --mount=/host/proc/$(pidof /usr/local/bin/kubelet)/ns/mnt --net=/host/proc/$(pidof /usr/local/bin/kubelet)/ns/net -- sh -c "fstrim -v --quiet-unsupported -I /tmp/fs.txt"
+            probes:
+              liveness:
+                enabled: false
+              readiness:
+                enabled: false
+              startup:
+                enabled: false
             resources:
               requests:
                 cpu: 25m
+                memory: 128Mi
               limits:
                 memory: 128Mi
             securityContext:
               privileged: true
-    defaultPodOptions:
-      hostNetwork: true
-      hostPID: true
-      topologySpreadConstraints:
-        - maxSkew: 1
-          topologyKey: kubernetes.io/hostname
-          whenUnsatisfiable: DoNotSchedule
-          labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: *app
+
     persistence:
       procfs:
         type: hostPath
