--- a/.github/renovate/customManagers.json5
+++ b/.github/renovate/customManagers.json5
@@ -4,9 +4,10 @@
     {
       "customType": "regex",
       "description": ["Process YAML custom dependencies"],
-      "fileMatch": [
-        "(^|/)kubernetes/.+\\.env$",
-        "(^|/)kubernetes/.+\\.ya?ml$"
+      managerFilePatterns: [
+        "/(^|/).+\\.env$/",
+        "/(^|/).+\\.sh$/",
+        "/(^|/).+\\.ya?ml(?:\\.j2)?$/",
       ],
       "matchStrings": [
         // # renovate: datasource=github-releases depName=k3s-io/k3s
