Update cluster name

--- a/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
@@ -9,7 +9,7 @@ spec:
   immediate: true
   backupOwnerReference: self
   cluster:
-    name: postgres
+    name: postgres16
   method: plugin
   pluginConfiguration:
     name: barman-cloud.cloudnative-pg.io
