Allow restore from same bucket

--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster16.yaml
@@ -4,6 +4,8 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: postgres16
+  annotations:
+    cnpg.io/skipEmptyWalArchiveCheck: 'enabled'
 spec:
   instances: 2
   imageName: ghcr.io/cloudnative-pg/postgresql:17.5-1
