Switch apps over to new cluster

--- a/kubernetes/apps/default/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/default/immich/app/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
       data:
         # App
         DB_DATABASE_NAME: &dbName immich
-        DB_HOSTNAME: &dbHost postgres16-rw.databases.svc.cluster.local
+        DB_HOSTNAME: &dbHost postgres-rw.databases.svc.cluster.local
         DB_PORT: "5432"
         DB_USERNAME: &dbUser "{{ .IMMICH_POSTGRES_USER }}"
         DB_PASSWORD: &dbpass "{{ .IMMICH_POSTGRES_PASS }}"
