--- a/kubernetes/apps/default/lldap/app/externalsecret.yaml
+++ b/kubernetes/apps/default/lldap/app/externalsecret.yaml
@@ -17,9 +17,9 @@ spec:
         LLDAP_LDAP_USER_EMAIL: "{{ .LLDAP_LDAP_USER_EMAIL }}"
         LLDAP_SERVER_KEY_SEED: "{{ .LLDAP_SERVER_KEY_SEED }}"
         LLDAP_DATABASE_URL: |-
-          postgres://{{ .LLDAP_POSTGRES_USER }}:{{ .LLDAP_POSTGRES_PASS }}@postgres16-rw.databases.svc.cluster.local/lldap
+          postgres://{{ .LLDAP_POSTGRES_USER }}:{{ .LLDAP_POSTGRES_PASS }}@postgres-rw.databases.svc.cluster.local/lldap
         INIT_POSTGRES_DBNAME: lldap
-        INIT_POSTGRES_HOST: postgres16-rw.databases.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres-rw.databases.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .LLDAP_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .LLDAP_POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
