--- a/kubernetes/apps/default/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/default/nextcloud/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
         NEXTCLOUD_OAUTH_CLIENT_SECRET: "{{ .NEXTCLOUD_OAUTH_CLIENT_SECRET }}"
         # Postgres Init
         INIT_POSTGRES_DBNAME: nextcloud
-        INIT_POSTGRES_HOST: postgres16-rw.databases.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres-rw.databases.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
