--- a/kubernetes/apps/default/tandoor/app/externalsecret.yaml
+++ b/kubernetes/apps/default/tandoor/app/externalsecret.yaml
@@ -10,7 +10,7 @@ spec:
       type: Opaque
       data:
         # App
-        POSTGRES_HOST: &dbHost postgres16-rw.databases.svc.cluster.local
+        POSTGRES_HOST: &dbHost postgres-rw.databases.svc.cluster.local
         POSTGRES_PORT: "5432"
         POSTGRES_USER: &dbUser "{{ .TANDOOR_POSTGRES_USER }}"
         POSTGRES_PASSWORD: &dbPass "{{ .TANDOOR_POSTGRES_PASSWORD }}"
