--- a/kubernetes/apps/default/vaultwarden/app/externalsecret.yaml
+++ b/kubernetes/apps/default/vaultwarden/app/externalsecret.yaml
@@ -10,13 +10,13 @@ spec:
       type: Opaque
       data:
         # App
-        DATABASE_URL: postgresql://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASSWORD }}@postgres16-rw.databases.svc.cluster.local.:5432/vaultwarden
+        DATABASE_URL: postgresql://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASSWORD }}@postgres-rw.databases.svc.cluster.local.:5432/vaultwarden
         ADMIN_TOKEN: "{{ .VAULTWARDEN_ADMIN_TOKEN }}"
         PUSH_INSTALLATION_ID: "{{ .PUSH_INSTALLATION_ID }}"
         PUSH_INSTALLATION_KEY:  "{{ .PUSH_INSTALLATION_KEY }}"
         # Postgres Init
         INIT_POSTGRES_DBNAME: vaultwarden
-        INIT_POSTGRES_HOST: postgres16-rw.databases.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres-rw.databases.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
