--- a/kubernetes/apps/default/atuin/app/externalsecret.yaml
+++ b/kubernetes/apps/default/atuin/app/externalsecret.yaml
@@ -10,9 +10,9 @@ spec:
       type: Opaque
       data:
         ATUIN_DB_URI: |-
-          postgres://{{ .ATUIN_POSTGRES_USER }}:{{ .ATUIN_POSTGRES_PASS }}@postgres16-rw.databases.svc.cluster.local/atuin
+          postgres://{{ .ATUIN_POSTGRES_USER }}:{{ .ATUIN_POSTGRES_PASS }}@postgres-rw.databases.svc.cluster.local/atuin
         INIT_POSTGRES_DBNAME: atuin
-        INIT_POSTGRES_HOST: postgres16-rw.databases.svc.cluster.local
+        INIT_POSTGRES_HOST: postgres-rw.databases.svc.cluster.local
         INIT_POSTGRES_USER: "{{ .ATUIN_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .ATUIN_POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
