--- a/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
@@ -169,7 +169,7 @@ spec:
     externalDatabase:
       enabled: true
       type: postgresql
-      host: postgres16-rw.databases.svc.cluster.local:5432
+      host: postgres-rw.databases.svc.cluster.local:5432
       database: nextcloud
       existingSecret:
         enabled: true
