--- a/kubernetes/apps/default/paperless/app/externalsecret.yaml
+++ b/kubernetes/apps/default/paperless/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
         PAPERLESS_ADMIN_PASSWORD: "{{ .PAPERLESS_ADMIN_PASS }}"
         PAPERLESS_SECRET_KEY: "{{ .PAPERLESS_SECRET_KEY }}"
         PAPERLESS_DBPASS: "{{ .PAPERLESS_POSTGRES_PASS }}"
-        PAPERLESS_DBHOST: &dbHost postgres16-rw.databases.svc.cluster.local
+        PAPERLESS_DBHOST: &dbHost postgres-rw.databases.svc.cluster.local
         PAPERLESS_SOCIALACCOUNT_PROVIDERS: |
           { "openid_connect": { "APPS": [{"provider_id": "authelia","name": "Authelia","client_id": "paperless","secret": "{{ .PAPERLESS_OAUTH_CLIENT_SECRET}}","settings": { "server_url": "https://authelia.${SECRET_DOMAIN}/.well-known/openid-configuration"}}]}}
         PAPERLESS_APPS: allauth.socialaccount.providers.openid_connect
