--- a/kubernetes/apps/default/radarr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/radarr/app/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
       data:
         # App
         RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
-        RADARR__POSTGRES__HOST: &dbHost postgres16-rw.databases.svc.cluster.local
+        RADARR__POSTGRES__HOST: &dbHost postgres-rw.databases.svc.cluster.local
         RADARR__POSTGRES__PORT: "5432"
         RADARR__POSTGRES__USER: &dbUser "{{ .RADARR_POSTGRES_USER }}"
         RADARR__POSTGRES__PASSWORD: &dbPass "{{ .RADARR_POSTGRES_PASSWORD }}"
