--- a/kubernetes/apps/default/sonarr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/sonarr/app/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
       data:
         # App
         SONARR__AUTH__APIKEY: "{{ .SONARR_API_KEY }}"
-        SONARR__POSTGRES__HOST: &dbHost postgres16-rw.databases.svc.cluster.local
+        SONARR__POSTGRES__HOST: &dbHost postgres-rw.databases.svc.cluster.local
         SONARR__POSTGRES__PORT: "5432"
         SONARR__POSTGRES__USER: &dbUser "{{ .SONARR_POSTGRES_USER }}"
         SONARR__POSTGRES__PASSWORD: &dbPass "{{ .SONARR_POSTGRES_PASSWORD }}"
