stream to new folder

--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -41,7 +41,7 @@ spec:
     isWALArchiver: true
     parameters:
       barmanObjectName: postgres
-      serverName: postgres16-v1
+      serverName: postgres-v1
 
   externalClusters:
   - name: *previousCluster
