Add google maps apikey

--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -13,6 +13,7 @@ spec:
         DJANGO_ADMIN_PASSWORD: "{{ .DJANGO_ADMIN_PASSWORD }}"
         DJANGO_ADMIN_EMAIL: "{{ .DJANGO_ADMIN_EMAIL }}"
         SECRET_KEY: "{{ .SECRET_KEY }}"
+        GOOGLE_MAPS_API_KEY: "{{ .GOOGLE_MAPS_API_KEY }}"
         PGHOST: &dbhost postgis-rw.databases.svc.cluster.local
         PGDATABASE: &dbname "adventurelog"
         PGUSER: &dbuser "{{ .POSTGRES_SUPER_USER }}"
@@ -47,6 +48,14 @@ spec:
       remoteRef:
         key: de49178f-239e-4590-b281-e11fcb718dd9
         property: secret_key
+    - secretKey: GOOGLE_MAPS_API_KEY
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: de49178f-239e-4590-b281-e11fcb718dd9
+        property: google_maps_apikey
     - secretKey: ADVENTURELOG_POSTGRES_USER
       sourceRef:
         storeRef:
