--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -279,6 +279,12 @@ spec:
           gnetId: 11312
           revision: 9
           datasource: Prometheus
+        vernemq:
+          # renovate: depName="VerneMQ Cluster"
+          gnetId: 23485
+          revision: 1
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
     sidecar:
       dashboards:
         enabled: true
