--- a/kubernetes/apps/default/spotizerr/ks.yaml
+++ b/kubernetes/apps/default/spotizerr/ks.yaml
@@ -18,3 +18,7 @@ spec:
     name: flux-system
     namespace: flux-system
   wait: false
+  postBuild:
+    substitute: 
+      APP: *appname
+      VOLSYNC_CAPACITY: 1Gi
