--- a/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
       retries: 3
   values:
     controllers:
-      redlib:
+      spotizerr:
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
