Aktualisieren von helmrelease.yaml

--- a/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
         containers:
           app:
             image:
-              repository: docker.io/spotizerr
+              repository: docker.io/cooldockerizer93/spotizerr
               tag: latest
             env:
               TZ: ${TZ}
