--- a/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
           app:
             image:
               repository: docker.io/cooldockerizer93/spotizerr
-              tag: latest
+              tag: 2.0.1
             env:
               TZ: ${TZ}
               PUID: 1000
