--- a/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
@@ -60,13 +60,13 @@ spec:
                 memory: 64M
               limits:
                 memory: 550M
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities: { drop: ["ALL"] }
+            #securityContext:
+              #allowPrivilegeEscalation: false
+              #readOnlyRootFilesystem: true
+              #capabilities: { drop: ["ALL"] }
     defaultPodOptions:
       securityContext:
-        runAsNonRoot: true
+        runAsNonRoot: false
         runAsUser: 1000
         runAsGroup: 1000
 
