Aktualisieren von helmrelease.yaml

--- a/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
@@ -40,18 +40,10 @@ spec:
               PGID: 1000
               REDIS_BACKEND: redis://dragonfly.databases.svc.local:6379/8
             probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /settings
-                    port: 8080
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
+              liveness: &
+                enabled: false
+              readiness: 
+                enabled: false
               startup:
                 enabled: false
             resources:
