--- a/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spotizerr/app/helmrelease.yaml
@@ -38,6 +38,7 @@ spec:
               TZ: ${TZ}
               PUID: 1000
               PGID: 1000
+              REDIS_URL: redis://dragonfly.databases.svc.local:6379/8
               REDIS_BACKEND: redis://dragonfly.databases.svc.local:6379/8
             probes:
               liveness: &
