Aktualisieren von kustomization.yaml

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -31,7 +31,7 @@ resources:
   - ./sabnzbd/ks.yaml
   - ./smtp-relay/ks.yaml
   - ./sonarr/ks.yaml
-  - ./spotizerr/ks.yaml
+  # - ./spotizerr/ks.yaml
   - ./tandoor/ks.yaml
   - ./tautulli/ks.yaml
   - ./vaultwarden/ks.yaml
