--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -32,6 +32,7 @@ resources:
   - ./smtp-relay/ks.yaml
   - ./sonarr/ks.yaml
   # - ./spotizerr/ks.yaml
+  - ./spooty/ks.yaml
   - ./tandoor/ks.yaml
   - ./tautulli/ks.yaml
   - ./vaultwarden/ks.yaml
