Add keda & enable nfs-scaler for radarr

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -8,6 +8,7 @@ components:
 resources:
   - ./dozzle/ks.yaml
   - ./grafana/ks.yaml
+  - ./keda/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kube-state-metrics/ks.yaml
   - ./prometheus-operator-crds/ks.yaml
