--- a/kubernetes/apps/default/radarr/ks.yaml
+++ b/kubernetes/apps/default/radarr/ks.yaml
@@ -12,6 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   components:
     - ../../../../flux/components/volsync
+    - ../../../../components/keda/nfs-scaler
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: databases
@@ -21,6 +22,8 @@ spec:
       namespace: volsync-system
     - name: rook-ceph-cluster
       namespace: rook-ceph
+    - name: keda
+      namespace: observability
   path: ./kubernetes/apps/default/radarr/app
   prune: true
   sourceRef:
