--- a/kubernetes/apps/default/radarr/ks.yaml
+++ b/kubernetes/apps/default/radarr/ks.yaml
@@ -23,7 +23,7 @@ spec:
     - name: rook-ceph-cluster
       namespace: rook-ceph
     - name: keda
-      namespace: observability
+      namespace: monitoring
   path: ./kubernetes/apps/default/radarr/app
   prune: true
   sourceRef:
