--- a/kubernetes/apps/monitoring/blackbox-exporter/app/probes.yaml
+++ b/kubernetes/apps/monitoring/blackbox-exporter/app/probes.yaml
@@ -13,3 +13,17 @@ spec:
     staticConfig:
       static:
         - nas
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/probe_v1.json
+apiVersion: monitoring.coreos.com/v1
+kind: Probe
+metadata:
+  name: nfs
+spec:
+  module: tcp_connect
+  prober:
+    url: blackbox-exporter.monitoring.svc.cluster.local:9115
+  targets:
+    staticConfig:
+      static:
+      - nas:2049
