Add nfs-scalers to apps

--- a/kubernetes/apps/default/audiobookshelf/ks.yaml
+++ b/kubernetes/apps/default/audiobookshelf/ks.yaml
@@ -11,11 +11,14 @@ spec:
       app.kubernetes.io/name: *appname
   components:
     - ../../../../flux/components/volsync
+    - ../../../../flux/components/keda/nfs-scaler
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
+    - name: keda
+      namespace: monitoring
   path: ./kubernetes/apps/default/audiobookshelf/app
   prune: true
   sourceRef:
