--- a/kubernetes/apps/default/bazarr/ks.yaml
+++ b/kubernetes/apps/default/bazarr/ks.yaml
@@ -11,6 +11,7 @@ spec:
       app.kubernetes.io/name: *appname
   components:
     - ../../../../flux/components/volsync
+    - ../../../../flux/components/keda/nfs-scaler
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: databases
@@ -20,6 +21,8 @@ spec:
       namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
+    - name: keda
+      namespace: monitoring
   path: ./kubernetes/apps/default/bazarr/app
   prune: true
   sourceRef:
