--- a/kubernetes/apps/default/immich/ks.yaml
+++ b/kubernetes/apps/default/immich/ks.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: &namespace default
 spec:
   targetNamespace: *namespace
+  components:
+    - ../../../../flux/components/keda/nfs-scaler
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: databases
@@ -13,6 +15,8 @@ spec:
       namespace: databases
     - name: external-secrets-stores
       namespace: kube-system
+    - name: keda
+      namespace: monitoring
   path: ./kubernetes/apps/default/immich/app
   prune: true
   sourceRef:
