--- a/kubernetes/apps/default/paperless/ks.yaml
+++ b/kubernetes/apps/default/paperless/ks.yaml
@@ -6,11 +6,15 @@ metadata:
   namespace: &namespace default
 spec:
   targetNamespace: *namespace
+  components:
+    - ../../../../flux/components/keda/nfs-scaler
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: databases
     - name: external-secrets-stores
       namespace: kube-system
+    - name: keda
+      namespace: monitoring
   path: ./kubernetes/apps/default/paperless/app
   prune: true
   sourceRef:
