--- a/kubernetes/apps/default/sabnzbd/ks.yaml
+++ b/kubernetes/apps/default/sabnzbd/ks.yaml
@@ -12,11 +12,14 @@ spec:
       app.kubernetes.io/name: *appname
   components:
     - ../../../../flux/components/volsync
+    - ../../../../flux/components/keda/nfs-scaler
   dependsOn:
     - name: volsync
       namespace: volsync-system
     - name: rook-ceph-cluster
       namespace: rook-ceph
+    - name: keda
+      namespace: monitoring
   path: ./kubernetes/apps/default/sabnzbd/app
   prune: true
   sourceRef:
