--- a/kubernetes/apps/default/immich/ks.yaml
+++ b/kubernetes/apps/default/immich/ks.yaml
@@ -9,8 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
-  components:
-    - ../../../../flux/components/keda/nfs-scaler
+  # components:
+  #   - ../../../../flux/components/keda/nfs-scaler
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: databases
@@ -18,8 +18,8 @@ spec:
       namespace: databases
     - name: external-secrets-stores
       namespace: kube-system
-    - name: keda
-      namespace: monitoring
+    # - name: keda
+    #   namespace: monitoring
   path: ./kubernetes/apps/default/immich/app
   prune: true
   sourceRef:
