--- a/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
@@ -182,14 +182,13 @@ spec:
       annotations:
         external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         nginx.ingress.kubernetes.io/proxy-body-size: "10G"
-        nginx.ingress.kubernetes.io/enable-cors: "true"
-        nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
-        nginx.ingress.kubernetes.io/custom-http-errors: "502,503"
+        nginx.ingress.kubernetes.io/proxy-buffering: "off"
+        nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
         nginx.ingress.kubernetes.io/server-snippet: |-
           server_tokens off;
           proxy_hide_header X-Powered-By;
-          rewrite ^/.well-known/webfinger /index.php/.well-known/webfinger last;
-          rewrite ^/.well-known/nodeinfo /index.php/.well-known/nodeinfo last;
+
+          rewrite ^/.well-known/webfinger /public.php?service=webfinger last;
           rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
           rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
           location = /.well-known/carddav {
@@ -211,9 +210,6 @@ spec:
           }
       path: /
       pathType: Prefix
-      tls:
-        - hosts:
-            - *host
 
     persistence:
       enabled: true
