--- a/kubernetes/apps/default/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/bazarr/app/helmrelease.yaml
@@ -118,5 +118,9 @@ spec:
         advancedMounts:
           bazarr:
             app:
+              - path: /config/cache
+                subPath: cache
+              - path: /config/log
+                subPath: log
               - path: /tmp
                 subPath: tmp
