--- a/kubernetes/apps/default/bazarr/ks.yaml
+++ b/kubernetes/apps/default/bazarr/ks.yaml
@@ -10,8 +10,8 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../flux/components/volsync
-    - ../../../../flux/components/keda/nfs-scaler
+    - ../../../../components/volsync
+    - ../../../../components/keda/nfs-scaler
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: databases
