--- a/kubernetes/apps/default/kyoo/ks.yaml
+++ b/kubernetes/apps/default/kyoo/ks.yaml
@@ -11,8 +11,8 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../flux/components/volsync
-    - ../../../../flux/components/keda/nfs-scaler
+    - ../../../../components/volsync
+    - ../../../../components/keda/nfs-scaler
   dependsOn:
     - name: external-secrets-stores
       namespace: kube-system
