--- a/kubernetes/apps/default/plex/ks.yaml
+++ b/kubernetes/apps/default/plex/ks.yaml
@@ -10,8 +10,8 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../flux/components/volsync
-    - ../../../../flux/components/keda/nfs-scaler
+    - ../../../../components/volsync
+    - ../../../../components/keda/nfs-scaler
   dependsOn:
     - name: volsync
       namespace: volsync-system
@@ -70,7 +70,7 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../flux/components/volsync
+    - ../../../../components/volsync
   dependsOn:
     - name: plex
     - name: tautulli
@@ -106,7 +106,7 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../flux/components/volsync
+    - ../../../../components/volsync
   interval: 30m
   timeout: 5m
   path: ./kubernetes/apps/default/plex/trakt-sync
