--- a/kubernetes/components/common/settings/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/settings/cluster-secrets.sops.yaml
@@ -14,11 +14,8 @@ stringData:
     SECRET_INFLUXDB_TOKEN: ENC[AES256_GCM,data:yyCfLpuUofEgWmA0XD/1UpbYjzS5O/h9YH1EIgbitWB11CyHxnIggtKQBtc5hbgttTrd59sSrg83OGOTXrlqwiBEujC+tYNkisWNm4iazQ5mVQwLROa8Xg==,iv:LPx1E2scIeoGu+vJ9yBVqB85Pj4XiFhYBEcxwDayG0g=,tag:uKwr3TAoEFu8jKgdkR43pA==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:lz+x0hVk9x2dTtdozy5qlbmfYyqie4DsMDokNdvxt2DYYjHa,iv:v84+hMLI3vd7YG8tRUOrWQAFVp+yHqZgyD94okBHyXg=,tag:4OVEtYPiSM9baLqmSJpqOA==,type:str]
     SECRET_REDLIB_SUBS: ENC[AES256_GCM,data:kT9eLXRaxb2m/JkSy2P63LD5LJqZxlHhxdLq8tVFJx9Urwug5fYPtTsZihUv,iv:qvidyM8E+T3s1G2zShuPdLWnDoyQpZ9lst7sFvtU6go=,tag:mGlIz6MnuIrZIG8Ss8dE5Q==,type:str]
+    TZ: ENC[AES256_GCM,data:gwHTnemb/Zpz5XQc2Q==,iv:Eesn+pGXIMna96ZYzDy+GRt3fmZN5iIIeUJhVpMTAoM=,tag:xKy8ZDLG+GD54KqgnvCEwA==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1wzxpy3cmcktm6554flrp6jnwdtxeceg3433fvsahnhem4gfudytqdkgleq
           enc: |
@@ -29,8 +26,7 @@ sops:
             SUc5em5PLzhWSUZ1Y0VjMUZjVndMSFUKhxoVNaodZ22zUD+qjpUa+YnIC7rURAXU
             M3Hqdk1SxSDRkSRLDw2IONjXoxIUmsymufeEexlWs9hNhc8VwYer2A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-18T21:07:13Z"
-    mac: ENC[AES256_GCM,data:pRWqanxUlFWNI3IErRGjN/SXvCV8DyvTTwhQCtnHwu27FA+Jmv7nUjwGNnio+5SQKev1x0JYr3bmml3ali9f63c1E9buV9VBKu3Aak8Zi/SDAqXTyotJ9nINdHuBIHwBz5anWcuUp3nSUR9USF2zXp68nH/yNpQid3Y4h4NQruY=,iv:TIMHJIeoA9ahoe58ZTTt+hfMSSfRPxtSBawqRpzmmEU=,tag:51r9VllSGGiKCUr3O5Iksg==,type:str]
-    pgp: []
+    lastmodified: "2025-06-24T20:20:29Z"
+    mac: ENC[AES256_GCM,data:5uaPVQvoCiDJn9EIcuQJWLzFKxezB6SgLOsEae3gUkSw29A9b0SCb/ftP1VGt/WWxDcWx/zvLpmuwHgz1EnMTBbiwy1JZl/XkU3iJnxSrEPodo0LuhhD3LFyVmEJauCEv8jQPW4YhM3CZ1ZK1GZVqVxIzdfxxCadKKxhKhsteh4=,iv:zm1BrmOPzs+283CANZmidcDM6EkpT/WGTBIBDNHWt+Q=,tag:rTCiv2nJX3lAfIiWTLB2sA==,type:str]
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.2
+    version: 3.10.2
