--- a/kubernetes/apps/databases/cloudnative-pg/cluster/service.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: databases
   annotations:
     external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_DOMAIN}
-    lbipam.cilium.io/ips: ${SVC_POSTGRES_ADDR}
+    lbipam.cilium.io/ips: 192.168.20.230
 spec:
   type: LoadBalancer
   ports:
