--- a/kubernetes/apps/default/smtp-relay/app/helmrelease.yaml
+++ b/kubernetes/apps/default/smtp-relay/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: smtp-relay.${SECRET_DOMAIN}
-          lbipam.cilium.io/ips: ${SVC_SMTP_RELAY_ADDRESS}
+          lbipam.cilium.io/ips: 192.168.20.233
         externalTrafficPolicy: Cluster
         ports:
           http:
