Switch to apikey

--- a/kubernetes/apps/networking/external-dns/unifi/externalsecret.yaml
+++ b/kubernetes/apps/networking/external-dns/unifi/externalsecret.yaml
@@ -3,20 +3,20 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: unpoller-secret
+  name: external-dns-unifi-secret
 spec:
   target:
     deletionPolicy: Delete
     template:
       type: Opaque
       data:
-        UP_UNIFI_DEFAULT_API_KEY: "{{ .UP_UNIFI_DEFAULT_API_KEY }}"
+        UNIFI_API_KEY: "{{ .UNIFI_API_KEY }}"
   data:
-    - secretKey: UP_UNIFI_DEFAULT_API_KEY
+    - secretKey: UNIFI_API_KEY
       sourceRef:
         storeRef:
           name: bitwarden-fields
           kind: ClusterSecretStore
       remoteRef:
         key: 73d280ed-0c6d-4573-bb74-14842e40b14b
-        property: unpoller-apikey
+        property: external-dns-apikey
