--- a/.taskfiles/Bootstrap/Taskfile.yaml
+++ b/.taskfiles/Bootstrap/Taskfile.yaml
@@ -8,7 +8,7 @@ tasks:
     prompt: Bootstrap Talos ...?
     cmds:
       - until talosctl --nodes {{.TALOS_CONTROLLER}} bootstrap; do sleep 10; done
-      - talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force {{.KUBERNETES_DIR}}
+      - talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force {{.K8S_CLUSTER_DIR}}
     vars:
       TALOS_CONTROLLER:
         sh: talosctl config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
@@ -21,10 +21,9 @@ tasks:
     prompt: Bootstrap Kubernetes Apps ...?
     cmds:
       - until kubectl wait nodes --for=condition=Ready=False --all --timeout=10m; do sleep 5; done
-      - sops --decrypt {{.K8S_CLUSTER_DIR}}/bootstrap/flux/age-key.sops.yaml | kubectl apply --server-side --filename -
-      - sops --decrypt {{.K8S_CLUSTER_DIR}}/bootstrap/flux/github-deploy-key.sops.yaml | kubectl apply --server-side --filename -
-      - helmfile --quiet --file {{.KUBERNETES_DIR}}/bootstrap/apps/helmfile.yaml apply --skip-diff-on-install --suppress-diff
-      - helmfile --quiet --file {{.KUBERNETES_DIR}}/bootstrap/apps/helmfile.yaml destroy --selector name=wipe-rook
+      - sops --decrypt {{.K8S_CLUSTER_DIR}}/bootstrap/age-key.sops.yaml | kubectl apply --server-side --filename -
+      - sops --decrypt {{.K8S_CLUSTER_DIR}}/bootstrap/github-deploy-key.sops.yaml | kubectl apply --server-side --filename -
+      - helmfile --quiet --file {{.K8S_CLUSTER_DIR}}/bootstrap/helmfile.yaml apply --skip-diff-on-install --suppress-diff
     env:
       FLUX_GITHUB_PUBLIC_KEYS:
         sh: curl -fsSL https://api.github.com/meta | jq --raw-output '"github.com "+.ssh_keys[]'
@@ -33,12 +32,9 @@ tasks:
         sh: talosctl config info --output json | jq --raw-output '.nodes | length'
       VAULT: K8s
     preconditions:
-      - op user get --me
       - talosctl config info
       - test -f {{.ROOT_DIR}}/age.key
-      - test -f {{.K8S_CLUSTER_DIR}}/bootstrap/flux/age-key.sops.yaml
-      - test -f {{.K8S_CLUSTER_DIR}}/bootstrap/flux/github-deploy-key.sops.yaml
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/apps/helmfile.yaml
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/apps/templates/resources.yaml.j2
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/apps/templates/wipe-rook.yaml.gotmpl
+      - test -f {{.K8S_CLUSTER_DIR}}/bootstrap/age-key.sops.yaml
+      - test -f {{.K8S_CLUSTER_DIR}}/bootstrap/github-deploy-key.sops.yaml
+      - test -f {{.K8S_CLUSTER_DIR}}/bootstrap/helmfile.yaml
       - which curl jq helmfile kubectl op talosctl
