--- a/kubernetes/bootstrap/helmfile.yaml
+++ b/kubernetes/bootstrap/helmfile.yaml
@@ -48,15 +48,6 @@ releases:
     needs:
       - kube-system/coredns
 
-  - name: wipe-rook
-    namespace: kube-system
-    chart: oci://ghcr.io/bjw-s-labs/helm/app-template
-    version: 4.1.2
-    values:
-      - ./templates/wipe-rook.yaml.gotmpl
-    needs:
-      - kube-system/spegel
-
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
@@ -64,7 +55,7 @@ releases:
     values:
       - ../../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
-      - kube-system/wipe-rook
+      - kube-system/coredns
 
   - name: flux-instance
     namespace: flux-system
